{
  "version": 4,
  "terraform_version": "1.5.7",
  "serial": 46,
  "lineage": "5e8b9601-8136-a89b-34fa-21ce70af5059",
  "resources": [
    {
      "module": "module.k8s_deploy",
      "mode": "managed",
      "type": "google_compute_global_address",
      "name": "ingress_static_ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address": "34.36.187.79",
            "address_type": "EXTERNAL",
            "creation_timestamp": "2025-01-21T22:08:28.240-08:00",
            "effective_labels": {
              "goog-terraform-provisioned": "true"
            },
            "id": "projects/peppy-arcadia-432311-g5/global/addresses/my-ingress-ip",
            "label_fingerprint": "vezUS-42LLM=",
            "name": "my-ingress-ip",
            "prefix_length": 0,
            "project": "peppy-arcadia-432311-g5",
            "self_link": "https://www.googleapis.com/compute/v1/projects/peppy-arcadia-432311-g5/global/addresses/my-ingress-ip",
            "terraform_labels": {
              "goog-terraform-provisioned": "true"
            }
          }
        }
      ]
    },
    {
      "module": "module.k8s_deploy",
      "mode": "managed",
      "type": "kubernetes_ingress_v1",
      "name": "app_ingress",
      "provider": "provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "default/app-ingress",
            "metadata": [
              {
                "annotations": {
                  "cert-manager.io/cluster-issuer": "letsencrypt-prod",
                  "cloud.google.com/neg": "{\"ingress\": true}",
                  "ingress.kubernetes.io/backends": "true",
                  "kubernetes.io/ingress.allow-http": "true",
                  "kubernetes.io/ingress.class": "gce",
                  "kubernetes.io/ingress.global-static-ip-name": "my-ingress-ip"
                },
                "generate_name": "",
                "generation": 1,
                "labels": null,
                "name": "app-ingress",
                "namespace": "default",
                "resource_version": "13225",
                "uid": "f48e0e62-276f-4dd4-9eed-d9e5170511b8"
              }
            ],
            "spec": [
              {
                "default_backend": [],
                "ingress_class_name": "",
                "rule": [
                  {
                    "host": "api.ljhun.shop",
                    "http": [
                      {
                        "path": [
                          {
                            "backend": [
                              {
                                "resource": [],
                                "service": [
                                  {
                                    "name": "app-one-service",
                                    "port": [
                                      {
                                        "name": "",
                                        "number": 80
                                      }
                                    ]
                                  }
                                ]
                              }
                            ],
                            "path": "/app-one/register",
                            "path_type": "Prefix"
                          },
                          {
                            "backend": [
                              {
                                "resource": [],
                                "service": [
                                  {
                                    "name": "app-two-service",
                                    "port": [
                                      {
                                        "name": "",
                                        "number": 80
                                      }
                                    ]
                                  }
                                ]
                              }
                            ],
                            "path": "/app-two/login",
                            "path_type": "Prefix"
                          },
                          {
                            "backend": [
                              {
                                "resource": [],
                                "service": [
                                  {
                                    "name": "app-two-service",
                                    "port": [
                                      {
                                        "name": "",
                                        "number": 80
                                      }
                                    ]
                                  }
                                ]
                              }
                            ],
                            "path": "/healthz",
                            "path_type": "Prefix"
                          }
                        ]
                      }
                    ]
                  }
                ],
                "tls": [
                  {
                    "hosts": [
                      "api.ljhun.shop"
                    ],
                    "secret_name": "app-ingress-tls"
                  }
                ]
              }
            ],
            "status": [
              {
                "load_balancer": [
                  {
                    "ingress": []
                  }
                ]
              }
            ],
            "timeouts": null,
            "wait_for_load_balancer": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.google_client_config.default",
            "module.cloud_sql.google_sql_database.default_db",
            "module.cloud_sql.google_sql_database_instance.mysql_instance",
            "module.cloud_sql.google_sql_user.root_user",
            "module.gke.google_container_cluster.gke_cluster",
            "module.k8s_deploy.google_compute_global_address.ingress_static_ip",
            "module.k8s_deploy.kubernetes_service.app_one_service",
            "module.k8s_deploy.kubernetes_service.app_two_service",
            "module.network.google_compute_global_address.private_ip_range",
            "module.network.google_compute_network.main_vpc",
            "module.network.google_compute_router.nat_router",
            "module.network.google_compute_router_nat.nat_config",
            "module.network.google_compute_subnetwork.private_subnet",
            "module.network.google_compute_subnetwork.public_subnet",
            "module.network.google_service_networking_connection.private_vpc_connection"
          ]
        }
      ]
    },
    {
      "module": "module.k8s_deploy",
      "mode": "managed",
      "type": "kubernetes_service",
      "name": "app_one_service",
      "provider": "provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "id": "default/app-one-service",
            "metadata": [
              {
                "annotations": {
                  "cloud.google.com/neg": "{\"exposed_ports\": {\"80\":{}}}",
                  "cloud.google.com/neg-status": "{\"network_endpoint_groups\":{\"80\":\"k8s1-06cf3ec3-default-app-one-service-80-6f7b41d8\"},\"zones\":[\"asia-northeast3-a\",\"asia-northeast3-b\"]}"
                },
                "generation": 0,
                "name": "app-one-service",
                "namespace": "default",
                "resource_version": "12965",
                "uid": "bd8ffe59-bc5a-4835-bab6-0ea879de7883"
              }
            ],
            "spec": [
              {
                "allocate_load_balancer_node_ports": true,
                "cluster_ip": "10.2.245.113",
                "cluster_ips": [
                  "10.2.245.113"
                ],
                "external_traffic_policy": "Cluster",
                "health_check_node_port": 0,
                "internal_traffic_policy": "Cluster",
                "ip_families": [
                  "IPv4"
                ],
                "ip_family_policy": "SingleStack",
                "port": [
                  {
                    "node_port": 31802,
                    "port": 80,
                    "protocol": "TCP",
                    "target_port": "5000"
                  }
                ],
                "publish_not_ready_addresses": false,
                "selector": {
                  "app": "app-one"
                },
                "session_affinity": "None",
                "type": "NodePort"
              }
            ],
            "status": [
              {
                "load_balancer": [
                  {
                  }
                ]
              }
            ],
            "wait_for_load_balancer": true
          },
          "dependencies": [
            "data.google_client_config.default",
            "module.cloud_sql.google_sql_database.default_db",
            "module.cloud_sql.google_sql_database_instance.mysql_instance",
            "module.cloud_sql.google_sql_user.root_user",
            "module.gke.google_container_cluster.gke_cluster",
            "module.network.google_compute_global_address.private_ip_range",
            "module.network.google_compute_network.main_vpc",
            "module.network.google_compute_router.nat_router",
            "module.network.google_compute_router_nat.nat_config",
            "module.network.google_compute_subnetwork.private_subnet",
            "module.network.google_compute_subnetwork.public_subnet",
            "module.network.google_service_networking_connection.private_vpc_connection"
          ]
        }
      ]
    },
    {
      "module": "module.k8s_deploy",
      "mode": "managed",
      "type": "kubernetes_service",
      "name": "app_two_service",
      "provider": "provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "id": "default/app-two-service",
            "metadata": [
              {
                "annotations": {
                  "cloud.google.com/neg": "{\"exposed_ports\": {\"80\":{}}}",
                  "cloud.google.com/neg-status": "{\"network_endpoint_groups\":{\"80\":\"k8s1-06cf3ec3-default-app-two-service-80-c7e83305\"},\"zones\":[\"asia-northeast3-a\",\"asia-northeast3-b\"]}"
                },
                "generation": 0,
                "name": "app-two-service",
                "namespace": "default",
                "resource_version": "12961",
                "uid": "1ce11a33-e910-40dc-85d8-b507a90eb339"
              }
            ],
            "spec": [
              {
                "allocate_load_balancer_node_ports": true,
                "cluster_ip": "10.2.64.103",
                "cluster_ips": [
                  "10.2.64.103"
                ],
                "external_traffic_policy": "Cluster",
                "health_check_node_port": 0,
                "internal_traffic_policy": "Cluster",
                "ip_families": [
                  "IPv4"
                ],
                "ip_family_policy": "SingleStack",
                "port": [
                  {
                    "node_port": 32683,
                    "port": 80,
                    "protocol": "TCP",
                    "target_port": "5000"
                  }
                ],
                "publish_not_ready_addresses": false,
                "selector": {
                  "app": "app-two"
                },
                "session_affinity": "None",
                "type": "NodePort"
              }
            ],
            "status": [
              {
                "load_balancer": [
                  {
                  }
                ]
              }
            ],
            "wait_for_load_balancer": true
          },
          "dependencies": [
            "data.google_client_config.default",
            "module.cloud_sql.google_sql_database.default_db",
            "module.cloud_sql.google_sql_database_instance.mysql_instance",
            "module.cloud_sql.google_sql_user.root_user",
            "module.gke.google_container_cluster.gke_cluster",
            "module.network.google_compute_global_address.private_ip_range",
            "module.network.google_compute_network.main_vpc",
            "module.network.google_compute_router.nat_router",
            "module.network.google_compute_router_nat.nat_config",
            "module.network.google_compute_subnetwork.private_subnet",
            "module.network.google_compute_subnetwork.public_subnet",
            "module.network.google_service_networking_connection.private_vpc_connection"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "google_compute_global_address",
      "name": "private_ip_range",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address": "10.3.0.0",
            "address_type": "INTERNAL",
            "creation_timestamp": "2025-01-21T21:34:15.548-08:00",
            "effective_labels": {
              "goog-terraform-provisioned": "true"
            },
            "id": "projects/peppy-arcadia-432311-g5/global/addresses/cloudsql-private-ip-range",
            "label_fingerprint": "vezUS-42LLM=",
            "name": "cloudsql-private-ip-range",
            "network": "https://www.googleapis.com/compute/v1/projects/peppy-arcadia-432311-g5/global/networks/gcp-dr-vpc",
            "prefix_length": 16,
            "project": "peppy-arcadia-432311-g5",
            "purpose": "VPC_PEERING",
            "self_link": "https://www.googleapis.com/compute/v1/projects/peppy-arcadia-432311-g5/global/addresses/cloudsql-private-ip-range",
            "terraform_labels": {
              "goog-terraform-provisioned": "true"
            }
          },
          "dependencies": [
            "module.network.google_compute_network.main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "google_compute_network",
      "name": "main_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": false,
            "bgp_always_compare_med": false,
            "bgp_best_path_selection_mode": "LEGACY",
            "delete_default_routes_on_create": false,
            "enable_ula_internal_ipv6": false,
            "id": "projects/peppy-arcadia-432311-g5/global/networks/gcp-dr-vpc",
            "mtu": 0,
            "name": "gcp-dr-vpc",
            "network_firewall_policy_enforcement_order": "AFTER_CLASSIC_FIREWALL",
            "network_id": "8397217866348051886",
            "numeric_id": "8397217866348051886",
            "project": "peppy-arcadia-432311-g5",
            "routing_mode": "REGIONAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/peppy-arcadia-432311-g5/global/networks/gcp-dr-vpc"
          }
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "google_compute_router",
      "name": "nat_router",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2025-01-21T21:34:15.772-08:00",
            "encrypted_interconnect_router": false,
            "id": "projects/peppy-arcadia-432311-g5/regions/asia-northeast3/routers/nat-router",
            "name": "nat-router",
            "network": "https://www.googleapis.com/compute/v1/projects/peppy-arcadia-432311-g5/global/networks/gcp-dr-vpc",
            "project": "peppy-arcadia-432311-g5",
            "region": "asia-northeast3",
            "self_link": "https://www.googleapis.com/compute/v1/projects/peppy-arcadia-432311-g5/regions/asia-northeast3/routers/nat-router"
          },
          "dependencies": [
            "module.network.google_compute_network.main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "google_compute_router_nat",
      "name": "nat_config",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_network_tier": "PREMIUM",
            "enable_dynamic_port_allocation": false,
            "enable_endpoint_independent_mapping": false,
            "endpoint_types": [
              "ENDPOINT_TYPE_VM"
            ],
            "icmp_idle_timeout_sec": 30,
            "id": "peppy-arcadia-432311-g5/asia-northeast3/nat-router/cloud-nat",
            "max_ports_per_vm": 0,
            "min_ports_per_vm": 0,
            "name": "cloud-nat",
            "nat_ip_allocate_option": "AUTO_ONLY",
            "project": "peppy-arcadia-432311-g5",
            "region": "asia-northeast3",
            "router": "nat-router",
            "source_subnetwork_ip_ranges_to_nat": "LIST_OF_SUBNETWORKS",
            "subnetwork": [
              {
                "name": "https://www.googleapis.com/compute/v1/projects/peppy-arcadia-432311-g5/regions/asia-northeast3/subnetworks/private-subnet",
                "source_ip_ranges_to_nat": [
                  "ALL_IP_RANGES"
                ]
              }
            ],
            "tcp_established_idle_timeout_sec": 1200,
            "tcp_time_wait_timeout_sec": 120,
            "tcp_transitory_idle_timeout_sec": 30,
            "udp_idle_timeout_sec": 30
          },
          "dependencies": [
            "module.network.google_compute_network.main_vpc",
            "module.network.google_compute_router.nat_router",
            "module.network.google_compute_subnetwork.private_subnet"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "private_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2025-01-21T21:34:16.184-08:00",
            "gateway_address": "10.0.1.1",
            "id": "projects/peppy-arcadia-432311-g5/regions/asia-northeast3/subnetworks/private-subnet",
            "ip_cidr_range": "10.0.1.0/24",
            "name": "private-subnet",
            "network": "https://www.googleapis.com/compute/v1/projects/peppy-arcadia-432311-g5/global/networks/gcp-dr-vpc",
            "private_ip_google_access": true,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "peppy-arcadia-432311-g5",
            "purpose": "PRIVATE",
            "region": "asia-northeast3",
            "secondary_ip_range": [
              {
                "ip_cidr_range": "10.4.0.0/14",
                "range_name": "pods"
              },
              {
                "ip_cidr_range": "10.2.0.0/16",
                "range_name": "services"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/peppy-arcadia-432311-g5/regions/asia-northeast3/subnetworks/private-subnet",
            "stack_type": "IPV4_ONLY",
            "subnetwork_id": 7975901958525238711
          },
          "dependencies": [
            "module.network.google_compute_network.main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2025-01-21T21:34:16.113-08:00",
            "gateway_address": "10.0.0.1",
            "id": "projects/peppy-arcadia-432311-g5/regions/asia-northeast3/subnetworks/public-subnet",
            "ip_cidr_range": "10.0.0.0/24",
            "name": "public-subnet",
            "network": "https://www.googleapis.com/compute/v1/projects/peppy-arcadia-432311-g5/global/networks/gcp-dr-vpc",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "peppy-arcadia-432311-g5",
            "purpose": "PRIVATE",
            "region": "asia-northeast3",
            "self_link": "https://www.googleapis.com/compute/v1/projects/peppy-arcadia-432311-g5/regions/asia-northeast3/subnetworks/public-subnet",
            "stack_type": "IPV4_ONLY",
            "subnetwork_id": 8765447252542832055
          },
          "dependencies": [
            "module.network.google_compute_network.main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.storage_and_lb",
      "mode": "managed",
      "type": "google_compute_global_forwarding_rule",
      "name": "http_rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "forwarding_rule_id": 3632067946265523529,
            "id": "projects/peppy-arcadia-432311-g5/global/forwardingRules/lb-http-forwarding-rule",
            "ip_address": "34.8.254.73",
            "ip_protocol": "TCP",
            "label_fingerprint": "42WmSpB8rSM=",
            "load_balancing_scheme": "EXTERNAL",
            "name": "lb-http-forwarding-rule",
            "network_tier": "PREMIUM",
            "port_range": "80-80",
            "project": "peppy-arcadia-432311-g5",
            "self_link": "https://www.googleapis.com/compute/v1/projects/peppy-arcadia-432311-g5/global/forwardingRules/lb-http-forwarding-rule",
            "target": "https://www.googleapis.com/compute/v1/projects/peppy-arcadia-432311-g5/global/targetHttpProxies/lb-http-proxy"
          },
          "dependencies": [
            "data.google_client_config.default",
            "module.cloud_sql.google_sql_database.default_db",
            "module.cloud_sql.google_sql_database_instance.mysql_instance",
            "module.cloud_sql.google_sql_user.root_user",
            "module.gke.google_container_cluster.gke_cluster",
            "module.gke.google_container_node_pool.primary_nodes",
            "module.gke.null_resource.delete_default_node_pool",
            "module.k8s_deploy.google_compute_global_address.ingress_static_ip",
            "module.k8s_deploy.helm_release.cert_manager",
            "module.k8s_deploy.kubernetes_deployment.app_one",
            "module.k8s_deploy.kubernetes_deployment.app_two",
            "module.k8s_deploy.kubernetes_ingress_v1.app_ingress",
            "module.k8s_deploy.kubernetes_job.db_init_job",
            "module.k8s_deploy.kubernetes_manifest.app_ingress_certificate",
            "module.k8s_deploy.kubernetes_manifest.letsencrypt_prod_issuer",
            "module.k8s_deploy.kubernetes_service.app_one_service",
            "module.k8s_deploy.kubernetes_service.app_two_service",
            "module.network.google_compute_global_address.private_ip_range",
            "module.network.google_compute_network.main_vpc",
            "module.network.google_compute_router.nat_router",
            "module.network.google_compute_router_nat.nat_config",
            "module.network.google_compute_subnetwork.private_subnet",
            "module.network.google_compute_subnetwork.public_subnet",
            "module.network.google_service_networking_connection.private_vpc_connection",
            "module.storage_and_lb.google_compute_backend_bucket.gcs_backend",
            "module.storage_and_lb.google_compute_target_http_proxy.http_proxy",
            "module.storage_and_lb.google_compute_url_map.lb_url_map",
            "module.storage_and_lb.google_storage_bucket.frontend_bucket"
          ]
        }
      ]
    },
    {
      "module": "module.storage_and_lb",
      "mode": "managed",
      "type": "google_compute_global_forwarding_rule",
      "name": "https_rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "forwarding_rule_id": 4044467063895176521,
            "id": "projects/peppy-arcadia-432311-g5/global/forwardingRules/lb-https-forwarding-rule",
            "ip_address": "34.8.157.92",
            "ip_protocol": "TCP",
            "label_fingerprint": "42WmSpB8rSM=",
            "load_balancing_scheme": "EXTERNAL",
            "name": "lb-https-forwarding-rule",
            "network_tier": "PREMIUM",
            "port_range": "443-443",
            "project": "peppy-arcadia-432311-g5",
            "self_link": "https://www.googleapis.com/compute/v1/projects/peppy-arcadia-432311-g5/global/forwardingRules/lb-https-forwarding-rule",
            "target": "https://www.googleapis.com/compute/v1/projects/peppy-arcadia-432311-g5/global/targetHttpsProxies/lb-https-proxy"
          },
          "dependencies": [
            "data.google_client_config.default",
            "module.cloud_sql.google_sql_database.default_db",
            "module.cloud_sql.google_sql_database_instance.mysql_instance",
            "module.cloud_sql.google_sql_user.root_user",
            "module.gke.google_container_cluster.gke_cluster",
            "module.gke.google_container_node_pool.primary_nodes",
            "module.gke.null_resource.delete_default_node_pool",
            "module.k8s_deploy.google_compute_global_address.ingress_static_ip",
            "module.k8s_deploy.helm_release.cert_manager",
            "module.k8s_deploy.kubernetes_deployment.app_one",
            "module.k8s_deploy.kubernetes_deployment.app_two",
            "module.k8s_deploy.kubernetes_ingress_v1.app_ingress",
            "module.k8s_deploy.kubernetes_job.db_init_job",
            "module.k8s_deploy.kubernetes_manifest.app_ingress_certificate",
            "module.k8s_deploy.kubernetes_manifest.letsencrypt_prod_issuer",
            "module.k8s_deploy.kubernetes_service.app_one_service",
            "module.k8s_deploy.kubernetes_service.app_two_service",
            "module.network.google_compute_global_address.private_ip_range",
            "module.network.google_compute_network.main_vpc",
            "module.network.google_compute_router.nat_router",
            "module.network.google_compute_router_nat.nat_config",
            "module.network.google_compute_subnetwork.private_subnet",
            "module.network.google_compute_subnetwork.public_subnet",
            "module.network.google_service_networking_connection.private_vpc_connection",
            "module.storage_and_lb.google_compute_backend_bucket.gcs_backend",
            "module.storage_and_lb.google_compute_managed_ssl_certificate.lb_cert",
            "module.storage_and_lb.google_compute_target_https_proxy.https_proxy",
            "module.storage_and_lb.google_compute_url_map.lb_url_map",
            "module.storage_and_lb.google_storage_bucket.frontend_bucket"
          ]
        }
      ]
    },
    {
      "module": "module.storage_and_lb",
      "mode": "managed",
      "type": "google_compute_target_http_proxy",
      "name": "http_proxy",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2025-01-21T22:09:30.422-08:00",
            "http_keep_alive_timeout_sec": 0,
            "id": "projects/peppy-arcadia-432311-g5/global/targetHttpProxies/lb-http-proxy",
            "name": "lb-http-proxy",
            "project": "peppy-arcadia-432311-g5",
            "proxy_bind": false,
            "proxy_id": 5473336094101419381,
            "self_link": "https://www.googleapis.com/compute/v1/projects/peppy-arcadia-432311-g5/global/targetHttpProxies/lb-http-proxy",
            "url_map": "https://www.googleapis.com/compute/v1/projects/peppy-arcadia-432311-g5/global/urlMaps/lb-url-map"
          },
          "dependencies": [
            "data.google_client_config.default",
            "module.cloud_sql.google_sql_database.default_db",
            "module.cloud_sql.google_sql_database_instance.mysql_instance",
            "module.cloud_sql.google_sql_user.root_user",
            "module.gke.google_container_cluster.gke_cluster",
            "module.gke.google_container_node_pool.primary_nodes",
            "module.gke.null_resource.delete_default_node_pool",
            "module.k8s_deploy.google_compute_global_address.ingress_static_ip",
            "module.k8s_deploy.helm_release.cert_manager",
            "module.k8s_deploy.kubernetes_deployment.app_one",
            "module.k8s_deploy.kubernetes_deployment.app_two",
            "module.k8s_deploy.kubernetes_ingress_v1.app_ingress",
            "module.k8s_deploy.kubernetes_job.db_init_job",
            "module.k8s_deploy.kubernetes_manifest.app_ingress_certificate",
            "module.k8s_deploy.kubernetes_manifest.letsencrypt_prod_issuer",
            "module.k8s_deploy.kubernetes_service.app_one_service",
            "module.k8s_deploy.kubernetes_service.app_two_service",
            "module.network.google_compute_global_address.private_ip_range",
            "module.network.google_compute_network.main_vpc",
            "module.network.google_compute_router.nat_router",
            "module.network.google_compute_router_nat.nat_config",
            "module.network.google_compute_subnetwork.private_subnet",
            "module.network.google_compute_subnetwork.public_subnet",
            "module.network.google_service_networking_connection.private_vpc_connection",
            "module.storage_and_lb.google_compute_backend_bucket.gcs_backend",
            "module.storage_and_lb.google_compute_url_map.lb_url_map",
            "module.storage_and_lb.google_storage_bucket.frontend_bucket"
          ]
        }
      ]
    },
    {
      "module": "module.storage_and_lb",
      "mode": "managed",
      "type": "google_compute_target_https_proxy",
      "name": "https_proxy",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2025-01-21T22:09:30.336-08:00",
            "http_keep_alive_timeout_sec": 0,
            "id": "projects/peppy-arcadia-432311-g5/global/targetHttpsProxies/lb-https-proxy",
            "name": "lb-https-proxy",
            "project": "peppy-arcadia-432311-g5",
            "proxy_bind": false,
            "proxy_id": 544123615927154037,
            "quic_override": "NONE",
            "self_link": "https://www.googleapis.com/compute/v1/projects/peppy-arcadia-432311-g5/global/targetHttpsProxies/lb-https-proxy",
            "ssl_certificates": [
              "https://www.googleapis.com/compute/v1/projects/peppy-arcadia-432311-g5/global/sslCertificates/lb-managed-cert"
            ],
            "tls_early_data": "DISABLED",
            "url_map": "https://www.googleapis.com/compute/v1/projects/peppy-arcadia-432311-g5/global/urlMaps/lb-url-map"
          },
          "dependencies": [
            "data.google_client_config.default",
            "module.cloud_sql.google_sql_database.default_db",
            "module.cloud_sql.google_sql_database_instance.mysql_instance",
            "module.cloud_sql.google_sql_user.root_user",
            "module.gke.google_container_cluster.gke_cluster",
            "module.gke.google_container_node_pool.primary_nodes",
            "module.gke.null_resource.delete_default_node_pool",
            "module.k8s_deploy.google_compute_global_address.ingress_static_ip",
            "module.k8s_deploy.helm_release.cert_manager",
            "module.k8s_deploy.kubernetes_deployment.app_one",
            "module.k8s_deploy.kubernetes_deployment.app_two",
            "module.k8s_deploy.kubernetes_ingress_v1.app_ingress",
            "module.k8s_deploy.kubernetes_job.db_init_job",
            "module.k8s_deploy.kubernetes_manifest.app_ingress_certificate",
            "module.k8s_deploy.kubernetes_manifest.letsencrypt_prod_issuer",
            "module.k8s_deploy.kubernetes_service.app_one_service",
            "module.k8s_deploy.kubernetes_service.app_two_service",
            "module.network.google_compute_global_address.private_ip_range",
            "module.network.google_compute_network.main_vpc",
            "module.network.google_compute_router.nat_router",
            "module.network.google_compute_router_nat.nat_config",
            "module.network.google_compute_subnetwork.private_subnet",
            "module.network.google_compute_subnetwork.public_subnet",
            "module.network.google_service_networking_connection.private_vpc_connection",
            "module.storage_and_lb.google_compute_backend_bucket.gcs_backend",
            "module.storage_and_lb.google_compute_managed_ssl_certificate.lb_cert",
            "module.storage_and_lb.google_compute_url_map.lb_url_map",
            "module.storage_and_lb.google_storage_bucket.frontend_bucket"
          ]
        }
      ]
    },
    {
      "module": "module.storage_and_lb",
      "mode": "managed",
      "type": "google_compute_url_map",
      "name": "lb_url_map",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2025-01-21T22:09:18.194-08:00",
            "default_route_action": [],
            "default_service": "https://www.googleapis.com/compute/v1/projects/peppy-arcadia-432311-g5/global/backendBuckets/gcs-backend",
            "default_url_redirect": [],
            "description": "",
            "fingerprint": "7oO7HRlTJSY=",
            "header_action": [],
            "host_rule": [
              {
                "description": "",
                "hosts": [
                  "ljhun.shop",
                  "www.ljhun.shop"
                ],
                "path_matcher": "web-paths"
              }
            ],
            "id": "projects/peppy-arcadia-432311-g5/global/urlMaps/lb-url-map",
            "map_id": 275464263282013537,
            "name": "lb-url-map",
            "path_matcher": [
              {
                "default_route_action": [],
                "default_service": "https://www.googleapis.com/compute/v1/projects/peppy-arcadia-432311-g5/global/backendBuckets/gcs-backend",
                "default_url_redirect": [],
                "description": "",
                "header_action": [],
                "name": "web-paths",
                "path_rule": [
                  {
                    "paths": [
                      "/*"
                    ],
                    "route_action": [],
                    "service": "https://www.googleapis.com/compute/v1/projects/peppy-arcadia-432311-g5/global/backendBuckets/gcs-backend",
                    "url_redirect": []
                  }
                ],
                "route_rules": []
              }
            ],
            "project": "peppy-arcadia-432311-g5",
            "self_link": "https://www.googleapis.com/compute/v1/projects/peppy-arcadia-432311-g5/global/urlMaps/lb-url-map",
            "test": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.google_client_config.default",
            "module.cloud_sql.google_sql_database.default_db",
            "module.cloud_sql.google_sql_database_instance.mysql_instance",
            "module.cloud_sql.google_sql_user.root_user",
            "module.gke.google_container_cluster.gke_cluster",
            "module.gke.google_container_node_pool.primary_nodes",
            "module.gke.null_resource.delete_default_node_pool",
            "module.k8s_deploy.google_compute_global_address.ingress_static_ip",
            "module.k8s_deploy.helm_release.cert_manager",
            "module.k8s_deploy.kubernetes_deployment.app_one",
            "module.k8s_deploy.kubernetes_deployment.app_two",
            "module.k8s_deploy.kubernetes_ingress_v1.app_ingress",
            "module.k8s_deploy.kubernetes_job.db_init_job",
            "module.k8s_deploy.kubernetes_manifest.app_ingress_certificate",
            "module.k8s_deploy.kubernetes_manifest.letsencrypt_prod_issuer",
            "module.k8s_deploy.kubernetes_service.app_one_service",
            "module.k8s_deploy.kubernetes_service.app_two_service",
            "module.network.google_compute_global_address.private_ip_range",
            "module.network.google_compute_network.main_vpc",
            "module.network.google_compute_router.nat_router",
            "module.network.google_compute_router_nat.nat_config",
            "module.network.google_compute_subnetwork.private_subnet",
            "module.network.google_compute_subnetwork.public_subnet",
            "module.network.google_service_networking_connection.private_vpc_connection",
            "module.storage_and_lb.google_compute_backend_bucket.gcs_backend",
            "module.storage_and_lb.google_storage_bucket.frontend_bucket"
          ]
        }
      ]
    }
  ]
}